--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -552,7 +552,7 @@
           }
      }       
 }
-@media screen and (max-width: 375px){
+@media screen and (min-width: 321px)and (max-width:375px){
      .kasa-home {
           @include pageLengthmobile();
           width: 100%;
@@ -562,7 +562,7 @@
      
                position: absolute;
                width: 336px;
-               width: 88%;
+               width: 90%;
                //height: 938px;
                height:805px;
                left: 20px;
@@ -639,6 +639,95 @@
                
                     //left: 21px;
                     top: 133px;
+                    left: 1px;
+                    background-color: #FFFFFF;
+                    
+               }
+          }
+     }  
+}
+@media screen and (max-width: 320px){
+     .kasa-home {
+          @include pageLengthmobile();
+          width: 100%;
+          margin-bottom: 4000px;
+   
+          &_body {
+     
+               position: absolute;
+               width: 336px;
+               width: 90%;
+               //height: 938px;
+               height:805px;
+               left: 20px;
+               left: 5%;
+               top: 83px;
+               
+               .kasa-home-body_section1 { 
+                    position: absolute;
+                    width: 281px;
+                    //width: 100%;
+                    height: 111px;
+                    height: 95px;
+                  
+                    border-radius: 5px;
+                                            
+                    .kasa-home-body-section1_desk{
+                        opacity: 0;
+
+                         
+                    }
+                    .kasa-home-body-section1_mobile{
+                         display: unset;
+                         opacity: 1;
+                         object-fit: cover;
+                         
+                         h1{
+                              position: absolute;
+                              left: 5.6%;
+                              right: 32.53%;
+                              top: 14.04%;
+                              bottom: 26.05%;
+
+                              @include  policeStyle1();
+                              font-size: 24px;
+                              line-height: 100%;
+                             
+                              display: flex;
+                              align-items: flex-end;
+               
+                              color: #FFFFFF;
+                              z-index: 1;
+                         }
+                         .sectionimage{
+                              margin-top: 84px;
+                              border-radius:5px;
+                              object-fit: cover;
+                              
+                              }
+                              img{
+                                   opacity: 1;
+                                   width: 100%;
+                                   mix-blend-mode: darken;
+                                   border-radius: 25px;
+                                   transform: translate(1px, -295%);
+                                   
+                              }
+                    }          
+                    
+                    
+               
+               }    
+          
+               .kasa-home-body_gallery{
+               //section 2 = gallery
+                    position: absolute;
+                    max-width: 320px;
+                    width: 100%;
+                    height: 805px;
+               
+                    //left: 21px;
+                    top: 98px;
                     left: 1px;
                     background-color: #FFFFFF;
                     
