--- a/src/styles/_thumb.scss
+++ b/src/styles/_thumb.scss
@@ -381,8 +381,8 @@
          
           .rectangle2{ 
       
-            width: 376px;
-            width: 100%;
+            width: 375px;
+            //width: 100%;
             height: 255px;
                left: 0px;
                top: 0px;
@@ -431,7 +431,7 @@
 
 }     
 
-@media screen and (max-width: 375px){
+@media screen and (min-width: 321px)and (max-width:375px){
   .kasa-home-thumb{
     
     position: absolute;
@@ -497,4 +497,60 @@
 }
 
 }
+@media screen and (max-width: 320px){
+     .kasa-home-thumb{
+    
+          position: absolute;
+          max-width: 300px;
+          width: 84%;
+          //width: 100%;
+          height: 255px;
+          left: -21px;
+          //top: 0px;
+          //top: 680px;
+          gap: 24px;
+          padding: 20px;
+          border-radius: 5px;
+          align-items: center;
+         
+          .rectangle2{ 
+      
+            width: 281px;
+            height: 218px;
+               left: 0px;
+               top: 0px;
+               border-radius: 10px;
+               background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
+               border-radius: 5px;
+               text-align:left; 
+              
+               
+               h2{
+                   
+                    @include  policeStyle1();
+                    font-size: 18px;
+                    color: #FFFFFF;
+                    height: 52px;
+                    width: 200px;
+                    margin-top: -62px;
+                    margin-left: 20px;
+                    margin-bottom: 20px;
+                    margin-right: 20px;
+               
+               }
+               img{
+                   
+                    border-radius: 5px;
+                    width: 100%;
+                    height: 100%;
+                    
+                   
+                 
+      
+               }    
+               
+          }
+          
+     }      
+}     
    
