--- a/src/styles/_logement.scss
+++ b/src/styles/_logement.scss
@@ -138,7 +138,7 @@
           }
      }
 }          
-@media screen and (min-width: 426px) and (max-width:768px){
+@media screen and (min-width: 426px) and (max-width:668px){
      .kasa-logement {
           @include pageLengthdesktop();
           .kasa-logement_body{
@@ -263,3 +263,6 @@
           }
      }
 }
+@media screen and (max-width: 320px){
+
+}     
