--- a/src/styles/_tag.scss
+++ b/src/styles/_tag.scss
@@ -338,7 +338,7 @@
           display: none;
      }    
 }}
-@media screen and (max-width: 375px){
+@media screen and (min-width: 321px)and (max-width:375px){
 
      .logement-rectangle3-texte{
           p{
@@ -412,31 +412,75 @@
      }    
 
 }
-/*
-.logement-rectangle34{
-     position: absolute;
-     width: 84px;
-     height: 18px;
-     //left: 350px;
-     left: 389px;
+@media screen and (max-width: 320px){
+     .logement-rectangle3-texte{
+          p{
+               position: absolute;
+               left: 14%;
+               right: 36.82%;
+               top: 12%;
+               bottom: 10.22%;
 
-     //top: 670px;
-     top: -214px;
-     background-color: #FF6060;
-     border-radius: 5px;
-   
-}
-.logement-rectangle35{
-     position: absolute;
-     width: 84px;
-     height: 18px;
-     //left: 350px;
-     left: 518px;
+               @include  policeStyle1();
+               font-size: 10px;
+               text-align: center;
+     
+               color: #FFFFFF;
+     
+          }
+     }
+     
+     .logement-rectangle31{
+          position: absolute;
+          //width: 84px;
+          width: 23%;
+          height: 18px;
+          left: 0px;
+          //top: 670px;
+          top: -214px;
+          background: #FF6060;
+          border-radius: 5px;
+          
+         
+               
+     }
+     .logement-rectangle32{
+          position: absolute;
+          width: 84px;
+          width: 23%;
+          height: 18px;
+          //left: 225px;
+          left: 94px;
+          left: 26%;
+          //top: 670px;
+          top: -214px;
+          background-color: #FF6060;
+          border-radius: 5px;
+         
+         
+     }
+     .logement-rectangle33{
+          position: absolute;
+          width: 84px;
+          width: 23%;
+          height: 18px;
+          //left: 350px;
+          //left: 187px;
+          left: 52%;
 
-     //top: 670px;
-     top: -214px;
-     background-color: #FF6060;
-     border-radius: 5px;
- 
-}    
-*/
+     
+          //top: 670px;
+          top: -214px;
+          background-color: #FF6060;
+          border-radius: 5px;
+     
+     }
+     
+     .logement-rectangle34{
+          display:none
+        
+     }
+     .logement-rectangle35{
+          display: none;
+     }    
+}     
