--- a/src/styles/_thumb.scss
+++ b/src/styles/_thumb.scss
@@ -244,7 +244,7 @@
          // height: 50px;   
           border-radius: 25px;
           padding-top:46px ;
-          padding-left: 20%;
+          padding-left: 26%;
           //overflow: scroll;
           
           
@@ -301,23 +301,34 @@
 }     
 @media screen and (min-width: 426px) and (max-width:525px){
      .kasa-home-thumb{
-    
-          position: absolute;
-          width: 335px;
+          //height: 829px;
+          height: 780px;
+          width: 1240px;
           width: 100%;
-          height: 255px;
-          left: -3%;
-          //top: 0px;
-          //top: 680px;
-          gap: 24px;
-          padding: 20px;
-          border-radius: 10px;
+          left: 100px;
+          left: 11%;
+          //top: 437px;
+          top: auto;
+          
+          border-radius: 0px;
+          display: flex;
+          flex-direction: row;
+          flex-wrap: wrap;
           align-items: center;
-         
+          row-gap: 60px;
+          gap: 32px;
+          padding: 20px;
+         // height: 50px;   
+          border-radius: 25px;
+          padding-top:46px ;
+          padding-left: 16%;
+          //overflow: scroll;
+          
+          
           .rectangle2{ 
-      
-            width: 376px;
-            height: 255px;
+     
+               height: 244px;
+               width: 244px;
                left: 0px;
                top: 0px;
                border-radius: 10px;
@@ -325,27 +336,31 @@
                border-radius: 10px;
               // width: 100%;
                text-align:left; 
+               margin-left: 7%;
               
                
                h2{
                 
-      
+     
                     height: 52px;
                     width: 300px;
+                    width: 230px;
                     //left: 20px;
                     //top: 268px;
                     @include  policeStyle1();
                     font-size: 18px;
-                    
+                 
                     //margin-top: 60px;
                     margin-top: -62px;
                     margin-left: 20px;
                     margin-bottom: 20px;
                     margin-right: 20px;
+                    display: flex;
+                    align-items: flex-end;
                    
-      
+     
                     color: #FFFFFF;
-      
+     
                }
                img{
                    
@@ -355,13 +370,11 @@
                     
                    
                  
-      
-               }    
-               
+     
+               }     
           }
-          
          
-      }
+     }
 }     
 @media screen and (min-width: 376px) and (max-width:425px){
      .kasa-home-thumb{
