--- a/src/styles/_carousel.scss
+++ b/src/styles/_carousel.scss
@@ -92,6 +92,103 @@
     color:  #FF6060;
   }
 }
+@media screen and (min-width:2560px){ 
+  .carousel-container {
+    position: absolute;
+    left: 0%;
+    right: 0%;
+    top: 0%;
+    bottom: 0%;
+    
+    //background: url(accomodation-1-3.jpg);
+    mix-blend-mode: normal;
+    border-radius: 25px;
+     
+     
+  }
+  
+  .carousel-arrow-container img {
+       width: 100%;
+       //max-width: 1240px;
+       max-width: unset;
+       height: 415px;
+       border-radius: 25px;
+       object-fit: cover;
+       }
+       
+       .carousel-arrow-container .MuiSvgIcon-root {
+       position: absolute;
+       cursor: pointer;
+       height: 79px;
+       width: 46px;
+       top: 30%;
+       transform: translateY(-50%);
+       z-index: 1;
+       color: white;
+       }
+       
+       .carousel-arrow-container .MuiSvgIcon-root:first-child {
+       left: 0;
+       margin-left: 15px;
+       
+       }
+       
+       .carousel-arrow-container .MuiSvgIcon-root:last-child {
+       right: 0;
+      
+       }
+   
+  .Carousel-title-location{
+    h1{
+      position: absolute;
+      //position: absolute;
+      width: 800px;
+      height: 77px;
+      //left: 100px;
+      //top: 573px;
+      //left: 6.94%;
+      left: -0.06%;
+      right: 48.96%;
+      //top: 55.96%;
+      //bottom: 39.06%;
+      //bottom: 24.06%;
+      top: 63.96%;
+      bottom: 24.06%;
+       
+      @include  policeStyle1();
+      font-size: 36px;
+     
+      /* or 51px */
+          
+      display: flex;
+      align-items: flex-end;
+          
+      color: #FF6060;
+          
+    }
+    p{
+      position: absolute;
+      //left: 6.94%;
+      left: -0.06%;
+      right: 80.83%;
+      //top: 60.94%;
+      //bottom: 36.52%;
+      //bottom: 20.52%;
+      top: 57.94%;
+      bottom: 19.52%;
+   
+      @include  policeStyle1();
+      font-size: 18px;
+      
+      /* identical to box height, or 26px */
+    
+      display: flex;
+      align-items: flex-end;
+    
+      color:  #FF6060;
+    }
+  }
+}  
 @media screen and (min-width: 901px) and (max-width:1024px){ 
   .carousel-container {
     position: absolute;
