--- a/src/styles/_collapse.scss
+++ b/src/styles/_collapse.scss
@@ -5,6 +5,7 @@
   flex-direction: column;
   position: absolute;
   width: 1023px;
+  width: 71%;
   height: 47px;
   left: 208px;
   top: 406px;
@@ -28,6 +29,7 @@
     border-radius: 5px;
     cursor: pointer;
     width: 1023px;
+    width: 100%;
     height: 47px;
 
     h3 {
@@ -70,7 +72,7 @@
     background: #F7F7F7;
     border-radius: 5px;
     width: 1023px;
-    //width: 71%;
+    width: 100%;
      & p{
         margin: 0;
         @include  policeStyle1();
@@ -720,24 +722,12 @@
     }
   }  
 }
-@media screen and (min-width: 1600px) and (max-width: 2000px) {
-  .kasa-apropos_collapse {
-    left: 20%;
-    
-  }
-  
-}
-@media screen and (min-width: 2001px) and (max-width: 2559px) {
-  .kasa-apropos_collapse {
-    left: 23%;
-    
-  }
-  
-}
-@media screen and  (min-width: 2560px) {
+
+
+@media screen and  (min-width: 1441px) and (max-width: 2560px) {
 
   .kasa-apropos_collapse {
-    left: 27%;
+    left: 10%;
     
   }
 }
@@ -747,10 +737,11 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  
   /*******/
 
   .collapse-container {
-    width: calc(50% - 38px);
+    width: calc(50% - 3%);
     margin-bottom: 20px;
   }
  
@@ -767,6 +758,7 @@
         cursor: pointer;
         margin-top: 58px;
         width: 582px;
+        width: 47%;
         height: 52px;
         position: absolute;
         z-index: 1;
@@ -817,6 +809,7 @@
         line-height: 142.6%;
         border-radius: 10px;
         Width:582px;
+        width: 47%;
         Height:249px;
         top: 95px;
         position: absolute;
@@ -1316,6 +1309,7 @@
           margin-top: 58px;
           width: 582px;
           width: 420px;
+          width: 47%;
           height: 52px;
           position: absolute;
           z-index: 1;
@@ -1367,6 +1361,7 @@
           border-radius: 10px;
           Width:582px;
           width: 420px;
+          width: 47%;
           Height:249px;
           top: 95px;
           position: absolute;
