--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -2,11 +2,13 @@
 
 .kasa-home {
      @include pageLengthdesktop();
+     width: 100%;
      margin-bottom: 2250px;
      &_body {
   
           position: absolute;
           width: 1240px;
+          width: 86%;
           height: 1095px;
           left: 100px;
           top: 171px;
@@ -66,6 +68,7 @@
           .kasa-home-body_gallery{
                position: absolute;
                width: 1240px;
+               width: 100%;
                //height: 829px;
                //height: 780px;
                //height: 2830px;
@@ -78,48 +81,28 @@
      }    
 }
 
-@media screen and (min-width: 1460px) and (max-width: 1599px) {
-     .kasa-home {
-          width: 80%;
-     }
-     .kasa-home-body_section1 { 
-          left: 0%;
-     }
-     .kasa-home-body_gallery{
-          left: 0%;
-     }
-     
-}
-@media screen and (min-width: 1600px) and (max-width: 2000px) {
-     .kasa-home{
-          .kasa-home-body_section1 { 
-               left: 10%;
-          }
-          .kasa-home-body_gallery{
-               left: 10%;
-          }
-     }
-}
-@media screen and (min-width: 2001px) and (max-width: 2559px){
-     .kasa-home{
-          .kasa-home-body_section1 { 
-               left: 20%;
-          }
-          .kasa-home-body_gallery{
-               left: 20%;
-          }
-     }
-}
-@media screen and (min-width: 2560px) {
+
+
+@media screen and  (min-width: 1441px) and (max-width: 2560px) {
     .kasa-home{
+     width: 94%;
+    
           .kasa-home-body_section1 { 
-               left: 40%;
+               left: 2%;
+               
           }
           .kasa-home-body_gallery{
-               left: 40%;
+               left: 2%;
           }
      }
 }
+@media screen and (min-width: 1025px) and (max-width:1405px){
+     .kasa-home {
+         
+
+          margin-bottom: 3500px;
+     }
+}     
 @media screen and (min-width: 769px) and (max-width:1024px){
      .kasa-home {
           @include pageLengthdesktop();
