--- a/src/styles/_hostrate.scss
+++ b/src/styles/_hostrate.scss
@@ -5,6 +5,7 @@
      height: 36px;
      //left: 1144px;
      left: 1053px;
+     left:85%;
      //top: 652px;
      top: 518px;
      z-index: auto;
@@ -24,6 +25,7 @@
           height: 52px;
           //left: 1170px;
           left: 1066px;
+          left: 87%;
           //top: 573px;
           top: 442px;
      
@@ -43,6 +45,7 @@
           height: 64px;
           //left: 1273px;
           left: 1166px;
+          left: 94%;
           //top: 567px;
           top: 440px;
          
@@ -434,14 +437,14 @@
           width: 135.5px;
           width: 19%;
           height: 33px;
-          left: 84%;
+          left: 89%;
    
           .HostRate-host-name {
                position: absolute;
                width: 61px;
-               height: 52px;
-               left: -58%;
-               top: 364px;
+               height: 54px;
+               left: -19%;
+               top: 358px;
                          
                @include  policeStyle1();
                font-size: 14px;
@@ -455,11 +458,11 @@
           }
           .HostRate-host-picture{
                position: absolute;
-               width: 42px;
-               height: 42px;
+               width: 44px;
+               height: 44px;
                left: 289px;
                left: 28%;
-               top: 374px;
+               top: 369px;
               
                //background: #C4C4C4;
                img {
@@ -535,4 +538,65 @@
      }
      
 }
+@media screen and (min-width:2560px){
+     .HostRate-rate{
+          position: absolute;
+          width: 196px;
+          height: 36px;
+          //left: 1144px;
+          left: 1053px;
+          left:85%;
+          //top: 652px;
+          top: 518px;
+          z-index: auto;
+     
+     }
+     .HostRate-rate-etoile img{
+               width: 36px;
+               height: 36px;
+               left: 1144px;
+               top: 652px;
+     }
+     .HostRate-host{
+          
+          .HostRate-host-name {
+               position: absolute;
+               width: 78px;
+               height: 52px;
+               //left: 1170px;
+               left: 1066px;
+               left: 85%;
+               //top: 573px;
+               top: 442px;
+          
+               @include  policeStyle1();
+               font-size: 18px;
+           
+               display: flex;
+               align-items: flex-end;
+               text-align: right;
+          
+               color: #FF6060;
+          
+          }
+          .HostRate-host-picture{
+               position: absolute;
+               width: 64px;
+               height: 64px;
+               //left: 1273px;
+               left: 1166px;
+               left: 89%;
+               //top: 567px;
+               top: 440px;
+              
+               //background: #C4C4C4;
+               img {
+                    width: 100%;
+                    object-fit: cover;
+                    border-radius: 50%;
+               }
+               
+          }
+     }
+}     
 
