--- a/src/styles/_logement.scss
+++ b/src/styles/_logement.scss
@@ -1,9 +1,11 @@
 @import "../styles/mixins.scss";
 .kasa-logement {
      @include pageLengthdesktop();
+     width: 100%;
      .kasa-logement_body{
           position: absolute;
           width: 1240px;
+          width: 86%;
           height: 643px;
           left: 100px;
           top: 128px;
@@ -26,6 +28,7 @@
      .kasa-logement-body_content{
           position: absolute;
           width: 1240px;
+          width: 100%;
           height: 101px;
           //left: 100px;
           //top: 670px;
@@ -51,10 +54,44 @@
      }
      
  } 
-@media screen and  (min-width: 2560px){
-     .kasa-logement { 
+ @media screen and  (min-width: 1441px) and (max-width: 2560px) {
+     .kasa-logement {
+          @include pageLengthdesktop();
+          width: 100%;
           .kasa-logement_body{
-          left: 23%;
+               position: absolute;
+               width: 1240px;
+               width: 90%;
+               height: 643px;
+               left: 100px;
+               top: 128px;
+     
+          }
+          
+          .kasa-logement-body_carousel{
+               position: absolute;
+               left: 2%;
+               right: 0%;
+               top: 0%;
+               bottom: 0%;
+     
+               //background: url(accomodation-1-3.jpg);
+               mix-blend-mode: normal;
+               border-radius: 25px;
+               width: 90%;
+          
+          }
+         
+          .kasa-logement-body_content{
+               position: absolute;
+               width: 1240px;
+               width: 90%;
+               height: 101px;
+               //left: 100px;
+               //top: 670px;
+               left: 2%;
+               top: 532px;
+     
           }
      }
      
