--- a/src/styles/_thumb.scss
+++ b/src/styles/_thumb.scss
@@ -2,6 +2,7 @@
      //height: 829px;
      height: 780px;
      width: 1240px;
+     width: 100%;
      left: 100px;
      //top: 437px;
      top: auto;
