--- a/src/styles/_carousel.scss
+++ b/src/styles/_carousel.scss
@@ -92,7 +92,7 @@
     color:  #FF6060;
   }
 }
-@media screen and (min-width:2560px){ 
+@media screen and  (min-width: 1441px) and (max-width: 2560px) {
   .carousel-container {
     position: absolute;
     left: 0%;
