--- a/src/styles/_carousel.scss
+++ b/src/styles/_carousel.scss
@@ -5,10 +5,29 @@
   top: 0%;
   bottom: 0%;
   
-  //background: url(accomodation-1-3.jpg);
+
   mix-blend-mode: normal;
   border-radius: 25px;
-   
+  .image-counter{
+    position: absolute;
+    left: 48.95%;
+    right: 49.11%;
+    top: -68.81%;
+    bottom: 37.01%;
+
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 142.6%;
+    /* or 26px */
+
+    display: flex;
+    align-items: flex-end;
+    text-align: center;
+
+    color: #FFFFFF;
+  }
    
 }
 
@@ -29,6 +48,7 @@
      transform: translateY(-50%);
      z-index: 1;
      color: white;
+     left: 96%;
      }
      
      .carousel-arrow-container .MuiSvgIcon-root:first-child {
