--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -102,30 +102,25 @@
 
           margin-bottom: 3500px;
      }
-}     
-@media screen and (min-width: 769px) and (max-width:1024px){
+}
+@media screen and (min-width:1025px) and (max-width:1400px){
      .kasa-home {
           @include pageLengthdesktop();
           margin-bottom: 3452px;
           &_body {
        
                position: absolute;
-               width: 1240px;
                width: 90%;
                height: 1095px;
-               left: 100px;
                left: 6%;
-               top: 171px;
-               //width: 90%;
-             // height: 98%;
+               top: 111px;
      
                .kasa-home-body_section1{
                     position: absolute;
-                    //width: 1240px;
+            
                     width: 100%;
-                    height: 223px;
-                    //left: 100px;
-                    //top: 171px;
+                    height: 190px;
+                   
                
                     background: #1e1c1c3d;
                     background-size: cover;
@@ -147,15 +142,16 @@
                          h1{
                               
                               position: absolute;
-                              left: 22.9%;
+                              left: 17.9%;
                               right: 25.14%;
-                              top: 30.32%;
+                              top: 33.32%;
                               bottom: 69.04%;
                               height: 68px;
                               width: 705px;
+                              width: 78%;
                          
                               @include  policeStyle1();
-                              font-size: 48px;
+                              font-size: 38px;
                               letter-spacing: 3px;
                               color: #FFFFFF;
                                              
@@ -173,11 +169,161 @@
                     position: absolute;
                     width: 1240px;
                     width: 100%;
-                    //height: 829px;
-                    //height: 780px;
-                    //height: 2830px;
+                    
                     left: -3px;
-                    top: 278px;
+                    top: 220px;
+                    height: 2817px;
+                    background: #F7F7F7;
+                    border-radius: 25px; 
+               }
+          }    
+     }
+}     
+@media screen and (min-width: 993px) and (max-width:1024px){
+     .kasa-home {
+          @include pageLengthdesktop();
+          margin-bottom: 3452px;
+          &_body {
+       
+               position: absolute;
+               width: 90%;
+               height: 1095px;
+               left: 6%;
+               top: 111px;
+     
+               .kasa-home-body_section1{
+                    position: absolute;
+            
+                    width: 100%;
+                    height: 190px;
+                   
+               
+                    background: #1e1c1c3d;
+                    background-size: cover;
+                    overflow: hidden;
+                    mix-blend-mode: darken;
+               
+                    border-radius: 25px;
+                    
+                    .kasa-home-body-section1_desk{
+                         opacity: 1;
+                         img{
+                    
+                              width: 100%;
+                              mix-blend-mode: darken;
+                              border-radius: 25px;
+                              transform: translate(1px, -29%);
+                              
+                         }
+                         h1{
+                              
+                              position: absolute;
+                              left: 17.9%;
+                              right: 25.14%;
+                              top: 33.32%;
+                              bottom: 69.04%;
+                              height: 68px;
+                              width: 705px;
+                              width: 78%;
+                         
+                              @include  policeStyle1();
+                              font-size: 38px;
+                              letter-spacing: 3px;
+                              color: #FFFFFF;
+                                             
+                              z-index: 1;
+                         }
+                   
+                    }
+                    .kasa-home-body-section1_mobile{
+                         opacity: 0;
+                         display: none;
+                    }
+               }
+     
+               .kasa-home-body_gallery{
+                    position: absolute;
+                    width: 1240px;
+                    width: 100%;
+                    
+                    left: -3px;
+                    top: 220px;
+                    height: 2817px;
+                    background: #F7F7F7;
+                    border-radius: 25px; 
+               }
+          }    
+     }
+}     
+@media screen and (min-width: 768px) and (max-width:992px){
+     .kasa-home {
+          @include pageLengthdesktop();
+          margin-bottom: 3452px;
+          &_body {
+       
+               position: absolute;
+               width: 90%;
+               height: 1095px;
+               left: 6%;
+               top: 111px;
+     
+               .kasa-home-body_section1{
+                    position: absolute;
+            
+                    width: 100%;
+                    height: 190px;
+                   
+               
+                    background: #1e1c1c3d;
+                    background-size: cover;
+                    overflow: hidden;
+                    mix-blend-mode: darken;
+               
+                    border-radius: 25px;
+                    
+                    .kasa-home-body-section1_desk{
+                         opacity: 1;
+                         img{
+                    
+                              width: 100%;
+                              mix-blend-mode: darken;
+                              border-radius: 25px;
+                              transform: translate(1px, -29%);
+                              
+                         }
+                         h1{
+                              
+                              position: absolute;
+                              left: 17.9%;
+                              right: 25.14%;
+                              top: 33.32%;
+                              bottom: 69.04%;
+                              height: 68px;
+                              width: 705px;
+                              width: 78%;
+                         
+                              @include  policeStyle1();
+                              font-size: 38px;
+                              letter-spacing: 3px;
+                              color: #FFFFFF;
+                                             
+                              z-index: 1;
+                         }
+                   
+                    }
+                    .kasa-home-body-section1_mobile{
+                         opacity: 0;
+                         display: none;
+                    }
+               }
+     
+               .kasa-home-body_gallery{
+                    position: absolute;
+                    width: 1240px;
+                    width: 100%;
+                    
+                    left: -3px;
+                    top: 220px;
                     height: 2817px;
                     background: #F7F7F7;
                     border-radius: 25px; 
@@ -185,7 +331,7 @@
           }    
      }
 }
-@media screen and (min-width: 716px) and (max-width:768px){
+@media screen and (min-width: 426px) and (max-width:767px){
      .kasa-home {
           @include pageLengthdesktop();
           margin-bottom: 2250px;
@@ -266,187 +412,13 @@
                     left: -3px;
                     top: 251px;
                     height: 2817px;
-                    background: #F7F7F7;
+                   // background: #F7F7F7;
                     border-radius: 25px; 
                }
           }    
      }
 }
-@media screen and (min-width: 526px) and (max-width:715px){
-     .kasa-home {
-          @include pageLengthdesktop();
-          margin-bottom: 4880px;
-          &_body {
-       
-               position: absolute;
-               width: 1240px;
-               width: 90%;
-               height: 1095px;
-               left: 100px;
-               left: 6%;
-               top: 104px;
-               //width: 90%;
-             // height: 98%;
-     
-               .kasa-home-body_section1{
-                    position: absolute;
-                    //width: 1240px;
-                    width: 100%;
-                    height: 223px;
-                    //left: 100px;
-                    //top: 171px;
-               
-                    background: #1e1c1c3d;
-                    background-size: cover;
-                    overflow: hidden;
-                    mix-blend-mode: darken;
-               
-                    border-radius: 25px;
-                   
-                      
-                    
-                    .kasa-home-body-section1_desk{
-                         opacity: 1;
-                         object-fit: cover;
-                         img{
-                    
-                              width: 100%;
-                              mix-blend-mode: darken;
-                              border-radius: 25px;
-                              transform: translate(1px, -23%);
-                              object-fit: cover;
-                         }
-                         h1{
-                              
-                              position: absolute;
-                              left: 17.9%;
-                              right: 25.14%;
-                              top: 50%;
-                              bottom: 69.04%;
-                              height: 68px;
-                              width: 705px;
-                              width: 82%;
-                         
-                              @include  policeStyle1();
-                              font-size: 33px;
-                              letter-spacing: 3px;
-                              color: #FFFFFF;
-                                             
-                              z-index: 1;
-                         }
-                   
-                    }
-                    .kasa-home-body-section1_mobile{
-                        
-                         opacity: 0;
-                        
-                    }
-               }
-     
-               .kasa-home-body_gallery{
-                    position: absolute;
-                    width: 1240px;
-                    width: 100%;
-                    //height: 829px;
-                    //height: 780px;
-                    //height: 2830px;
-                    left: -3px;
-                    top: 251px;
-                    height: 2817px;
-                    background: #F7F7F7;
-                    border-radius: 25px; 
-               }
-          }    
-     }
-}     
-@media screen and (min-width: 426px) and (max-width:525px){
-     .kasa-home {
-          @include pageLengthmobile();
-          width: 100%;
-          margin-bottom: 4800px;
-   
-          &_body {
-     
-               position: absolute;
-               width: 336px;
-               width: 88%;
-               //height: 938px;
-               height:805px;
-               left: 20px;
-               left: 6%;
-               top: 83px;
-               
-               .kasa-home-body_section1 { 
-                    position: absolute;
-                    width: 335px;
-                    width: 100%;
-                    height: 111px;
-                    //left: 20px;
-                    //top: 83px;
-                    border-radius: 10px;
-                                            
-                    .kasa-home-body-section1_desk{
-                         opacity: 0;
-          
-                    }
-                    .kasa-home-body-section1_mobile{
-                         display: unset;
-                         opacity: 1;
-                         object-fit: cover;
-                         h1{
-                              position: absolute;
-                              left: 5.6%;
-                              right: 32.53%;
-                              top: 14.04%;
-                              bottom: 26.05%;
 
-                              @include  policeStyle1();
-                              font-size: 24px;
-                              line-height: 100%;
-                             
-                    
-                              display: flex;
-                              align-items: flex-end;
-               
-                              color: #FFFFFF;
-                              z-index: 1;
-                         }
-                         .sectionimage{
-                              margin-top: 84px;
-                              border-radius:10px;
-                              object-fit: cover;
-                              }
-                              img{
-               
-                                   width: 100%;
-                                   mix-blend-mode: darken;
-                                   border-radius: 25px;
-                                   transform: translate(1px, -263%);
-                                 
-                              }
-                    }          
-                    
-                    
-               
-               }    
-          
-               .kasa-home-body_gallery{
-               //section 2 = gallery
-                    position: absolute;
-                    width: 335px;
-                    width: 100%;
-                    height: 805px;
-               
-                    //left: 21px;
-                    top: 133px;
-                    left: 1px;
-                    left: 0;
-                    //background-color: #FFFFFF;
-                    
-               }
-          }
-     }       
-}          
 @media screen and (min-width: 376px) and (max-width:425px){
      .kasa-home {
           @include pageLengthmobile();
@@ -549,12 +521,13 @@
                //height: 938px;
                height:805px;
                left: 20px;
+               left: 6%;
                top: 83px;
                
                .kasa-home-body_section1 { 
                     position: absolute;
                     width: 335px;
-                   // width: 100%;
+                   width: 100%;
                     height: 111px;
                     //left: 20px;
                     //top: 83px;
@@ -616,7 +589,7 @@
                .kasa-home-body_gallery{
                //section 2 = gallery
                     position: absolute;
-                    width: 335px;
+                   // width: 335px;
                    // width: 100%;
                     height: 805px;
                
@@ -649,7 +622,7 @@
                .kasa-home-body_section1 { 
                     position: absolute;
                     width: 281px;
-                    //width: 100%;
+                    width: 100%;
                     height: 111px;
                     height: 95px;
                   
@@ -673,7 +646,8 @@
                               bottom: 26.05%;
 
                               @include  policeStyle1();
-                              font-size: 24px;
+                              width: 100%;
+                              font-size: 20px;
                               line-height: 100%;
                              
                               display: flex;
@@ -683,12 +657,14 @@
                               z-index: 1;
                          }
                          .sectionimage{
+                      
                               margin-top: 84px;
                               border-radius:5px;
                               object-fit: cover;
                               
                               }
                               img{
+                                  display: block;
                                    opacity: 1;
                                    width: 100%;
                                    mix-blend-mode: darken;
@@ -710,7 +686,7 @@
                     height: 805px;
                
                     //left: 21px;
-                    top: 98px;
+                    top: 120px;
                     left: 1px;
                     background-color: #FFFFFF;
                     
